# robot-dog

./: .gitignore  Dockerfile  README.md  main.py  platformio.ini
.devcontainer/: Dockerfile  devcontainer.json
Robot_Description/: CMakeLists.txt  package.xml
Robot_Description/install/: local_setup.ps1  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Robot_Description/launch/: robot_description.launch.py
Robot_Description/log/: latest_build
Robot_Description/meshes/: Component1_Mirror___5__1.stl  (+3 more)
foxglove_config/: robot_dog.json
install/: local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
robot_ws/: .gitignore
robot_ws/src/robot_description/: CMakeLists.txt  package.xml
robot_ws/src/robot_description/config/: controllers.yaml
robot_ws/src/robot_description/launch/: controller.launch.py  gazebo.launch.py  master.launch.py  view_robot.launch.py
robot_ws/src/robot_description/meshes/: Component1_Mirror___4__1.stl  Component1_Mirror___5__1.stl  Left_Link_v4_1.stl  Left_Link_v4_2.stl  Servo_Horn_v3_1.stl  Servo_Horn_v3_7.stl  Servo_Horn_v3_8.stl
robot_ws/src/robot_description/rviz/: view_robot.rviz
robot_ws/src/robot_description/urdf/: assem.trans  assem.xacro  materials.xacro  robot_core.xacro  robot_trans.trans  ros2_control.xacro
robot_ws/src/robot_description/urdf/meshes/: Component2_Mirror__1.stl  Foot_v3_1.stl  Mini_Link_v3_1.stl  Mini_Link_v3_2.stl  Mini_Link_v3_3.stl  Right_Link_v3_1.stl  Right_Link_v3_2.stl  Servo_Horn_v3_4.stl  Servo_Horn_v3_5.stl
src/: main.c
(+117 files in other folders)
